Corrected font and header spacing

--- a/week7/css/mobile.css
+++ b/week7/css/mobile.css
@@ -3,6 +3,22 @@ html {
   margin: 0;
 }
 
+body {
+	/*color:#331C12; ALMOST BLACK  
+	color:#FFEDE5;  	
+	color:#f5f6d4; BODY BACKGROUND
+	color:#A7C520; Light Green Background 
+	color:#193441; */
+	line-height: 1.5rem;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size:1em;
+	background: #f5f6d4;
+	width:100%;
+	margin: 0 auto;
+	color:#6C6E3C; /*  ALL BASE TEXT COLOR  */
+}
+
+
 /* LINK STYLES SECTIONS FOR THE WEBSITE */
 nav a  { color: #331C12; text-decoration:none;font-weight:bold;font-size: .9em; padding: 5px 22px;
 border-radius: 5px;  }    /* unvisited links */
@@ -37,6 +53,7 @@ header h1 {
   margin: 0;
   text-align: left;
   font-size: 2em;
+  line-height: 1.5em;
   padding: 30px 0px 30px 0px;
   width: 100px;
   color: #a7c520;
@@ -60,6 +77,7 @@ nav ul{
 
 nav ul li{	
   font-size: 2em;
+  line-height: 1em;
 	text-decoration: none;
 }
 
